changes to text of wcu homepage portfolio item

--- a/_projects/wcu-homepage.html
+++ b/_projects/wcu-homepage.html
@@ -11,14 +11,17 @@ published: true
 ---
 
 <div class="row">
-    <div class="col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
-        <img class="img-fluid" src="../../img/portfolio/wcu-homepage-front.jpg" alt="Side-by-side comparison of the old homepage layout with my new design" />
+    <div class="col-lg-10 offset-lg-1 col-xl-8 offset-xl-2 text-center">
+        <img class="img-fluid" src="../../img/portfolio/wcu-homepage-front.jpg" alt="An iphone, ipad and MacBook laptop showing the wcu.edu website on the screen." />
     </div>
 </div>
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-md-2">
             <p>In the summer and early autumn of 2019, I redesigned and developed the Western Carolina University (WCU) homepage. WCU is a a mid-sized, regional university located in western North Carolina. I worked on user experience, designed the new homepage from scratch, and completed development for this homepage overhaul. Below I walk through the process of this project. You can jump to the end to read the <a href="#results">project results</a>.</p>
+        </div>
+        <div class="col-md-8 offset-md-2 text-center">
+            <a class="btn btn-primary" href="https://www.wcu.edu/" target="_blank">Visit the Site</a>
         </div>
     </div>
 </div>
@@ -30,7 +33,7 @@ published: true
             <h3>User Experience Research</h3>
         </div>
         <div class="col-md-7 order-md-3">
-            <img class="img-fluid" src="../../img/portfolio/wcu-homepage-uxfeedback.jpg" alt="Side-by-side comparison of the old homepage layout with my new design" />
+            <img class="img-fluid" src="../../img/portfolio/wcu-homepage-uxfeedback.jpg" alt="Screenshots of the old homepage that are marked up with feedback comments. These comments are listed in the page text." />
         </div>
         <div class="col-md-5 order-md-2">
             <p>Prior to beginning the design process we conducted user testing with individuals in external prospective student and prospective parent demographics. We also received feedback from within the department and institution.</p>    
@@ -45,17 +48,17 @@ published: true
             </ul>
         </div>
         <div class="col-md-6 order-md-4">
-            <img class="img-fluid" src="../../img/portfolio/wcu-homepage-sketches.jpg" alt="Side-by-side comparison of the old homepage layout with my new design" />
+            <img class="img-fluid" src="../../img/portfolio/wcu-homepage-sketches.jpg" alt="Hand drawn sketches of different page layout ideas." />
         </div>
         <div class="col-md-6 order-md-5 mt-5">
-            <h3>Early design</h3>
+            <h3>Early Design</h3>
             <p>After gathering all of the data and feedback I began designing, starting with hand drawn sketches to quickly iterate through ideas.</p>
         </div>
         <div class="col-md-12 order-md-6 mt-5">
             <h3>Prototyping</h3>
         </div>
         <div class="col-md-7 order-md-8">
-            <img class="img-fluid" src="../../img/portfolio/wcu-homepage-xd-drafts.jpg" alt="Side-by-side comparison of the old homepage layout with my new design" />
+            <img class="img-fluid" src="../../img/portfolio/wcu-homepage-xd-drafts.jpg" alt="A screenshot of various page layout designs in a web design software window." />
         </div>
         <div class="col-md-5 order-md-7">
             <p>I then developed a handful of different design versions using Adobe XD and sought feedback from collegues in my department. We selected one design with which to move forward.</p>
@@ -64,12 +67,12 @@ published: true
             <h3>Refinement and Responsive Layouts</h3>
         </div>
         <div class="col-md-9 order-md-10">
-            <img class="img-fluid" src="../../img/portfolio/wcu-homepage-layouts.jpg" alt="Side-by-side comparison of the old homepage layout with my new design" />
+            <img class="img-fluid" src="../../img/portfolio/wcu-homepage-layouts.jpg" alt="A screenshot of a web design software window containing the page layout at different device widths, like mobile phone and tablet." />
         </div>
         <div class="col-md-3 order-md-11">
             <p>I took the selected design and worked out all of the details, determined how the layout would respond, and added some prototyping interactivity to show how the page would function.</p>
         </div>
-        <div class="col-md-6 order-md-12 mt-5">
+        <div class="col-md-8 offset-md-2 order-sm-12 mt-5">
             <h3>Development and Launch</h3>
             <p>In this project I managed and participated in the entire development process. I first developed the page layout locally. I then collaborated with another front-end developer to integrate the code into the CMS in a test environment, which included building new elements into the site’s XSL. After repeated testing and working out the bugs, we replaced the homepage with the new code. Finally, we published the new page!</p>
         </div>
@@ -80,33 +83,32 @@ published: true
     <div class="row">
         <div class="col-md-6">
             <h2 class="section-heading" id="results">Results</h2>
-            <p>Improved UX
-                New Content Areas
-                Modernized Style
-                </p>
-        <p>Results for improved user experience</p>
+            <p>Results summary: Improved UX, new content areas, modernized style</p>
+        <h3>Results for improved user experience:</h3>
         <ul>
-            <li>Reduce load time of the page</li>
-            <li>Surface important links for different audience groups</li>
+            <li>Reduced load time of the page</li>
+            <li>Surfaced important links for different audience groups</li>
             <li>Reduced content repetition</li>
             <li>Cleaner interface</li>
-            <li>Improve event representation and information</li>
-            <li> While providing a sense of familiarity in the updated design</li>
+            <li>Improved event representation and information</li>
+            <li>Provides a sense of familiarity in the updated design</li>
         </ul>         
            
-        <p>Other benefits of the new page include</p>
+        <h3>Additional benefits of the new page include:</h3>
         <ul>
-            <li>An Added  promotional area for important non-story content</li>
+            <li>An added promotional area for important non-story content</li>
             <li>Surfacing of content marketing and news content</li>
-            <li>And a Refreshed look and feel of the page to modernize the style and provide more breathing room while staying true to the university's brand</li>
+            <li>Inclusion of sought-after social media accounts</li>
+            <li>A refreshed look and feel of the page to modernize the style and provide more breathing room while staying true to the university's brand</li>
         </ul>
-
-            </p>
         </div>
-        <div class="col-md-6">
-            <img class="img-fluid" src="../../img/portfolio/wcu-homepage-old-vs-new.jpg" alt="Side-by-side comparison of the old homepage layout with my new design" />
+        <div class="col-md-6 text-center">
+            <figure class="figure">
+                <img class="figure-img img-fluid" src="../../img/portfolio/wcu-homepage-old-vs-new.jpg" alt="Side-by-side comparison of the old homepage layout with my new design." />
+                <figcaption class="figure-caption">The old homepage design vs. the new homepage design.</figcaption>
+              </figure>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-12 text-center">
             <a class="btn btn-primary" href="https://www.wcu.edu/" target="_blank">Visit the Site</a>
         </div>
     </div>
