--- a/work-with-me.html
+++ b/work-with-me.html
@@ -15,6 +15,28 @@ published: false
   <div class="col-md-12">
     <h2>Pricing</h2>
   </div>  
+
+  <div class="col-lg-6 col-md-10 mx-auto">
+    <p> I am a designer and web developer with more than a decade of experience in the design and digital landscape. level-up their online presence and modernize their style while staying true to their core personality</p>
+    <p>If you work with me you'll have:</p>
+    <ul>
+        <li>Content hierarchy for what your users are seeking</li>
+        <li>Modern aesthetic showing you care about your online reputation</li>
+        <li>Focus on responsive behavior so your site meets users where they are – on their phones</li>
+    </ul>
+  </div>
+
+  <div class="col-md-9 mx-auto">
+    <p>When you work with me, you should expect questions like “What are your key differentiators?” and “What are the primary goals of your target audience?” not “What colors do want your buttons to be?”</p>
+    <p>I’m not a good fit for you if:</p>
+    <ul class="failure-list">
+        <li>You are looking for someone to just “make it pretty.”</li>
+        <li>You don’t like someone asking questions and you want them the to blindly follow instructions.</li>
+        <li>You aren’t open to someone pushing back on ideas in order to advocate for your end users and customers.</li>
+    </ul>
+    <p>Do we sound like a match? Tell me about your project.</p>
+    <a class="btn btn-secondary" href="{{"/inquire" | relative_url }}">Inquire</a>
+  </div>
 </div>
 
 
