--- a/work-with-me.html
+++ b/work-with-me.html
@@ -3,7 +3,7 @@ layout: page
 title: Work with Me
 background: '/img/bg-work-with-me.jpg'
 last-updated: April 18, 2022
-published: false
+published: true
 ---
 <p class="section-heading">Let's take your business's brand to the next level</p>
 <p>I am a web design and development manager of an enterprise-wide university website with 200+ CMS editors. I have over nine years of experience in various areas of design including web, digital, and print design, and have eight years of service in the higher education landscape. I currently oversee the style, structure, functionality, and technical advancement of the university's web spaces, and design and build new pages and sites for high-level initiatives. I enjoy the complex artistry of web design and the structure and exactness of front-end code. I crave organization and I'm motivated by helping others achieve their goals.</p>
