unpublishes incomplete portfolio items

--- a/_projects/mountains-to-macys.html
+++ b/_projects/mountains-to-macys.html
@@ -7,7 +7,7 @@ work-type: Web Design and Development
 site-type: Static HTML Site
 front-image: /img/portfolio/mountains-to-macys-front.jpg
 front-image-alt: "dinosaur scultptures"
-published: true
+published: false
 ---
 
 <a href="https://www.wcu.edu/engage/give-to-wcu/mountainstomacys/index.html" target="_blank">Visit the Site</a>
