--- a/_projects/ou-homepage.html
+++ b/_projects/ou-homepage.html
@@ -7,7 +7,7 @@ work-type: Web Design and Development
 site-type: Drupal CMS site
 front-image: /img/portfolio/experience-front.jpg
 front-image-alt: "university website homepage thumbnail"
-published: true
+published: false
 ---
 
 <h2 class="section-heading">Project Goals</h2>
