--- a/about.html
+++ b/about.html
@@ -3,114 +3,130 @@ layout: page
 title: About Me
 description: I enjoy crafting new brands, creating web designs, and writing code to bring them to the web.
 background: '/img/bg-about.jpg'
-last-updated: July 3, 2022
+last-updated: July 5, 2022
 ---
 
-<img class="img-thumbnail float-left mr-4 mb-2 mt-4" style="width: 40%;" src="../../img/haley-computer-glasses.jpg" alt="portrait photograph of Haley Hopper wearing glasses and a soft smile" />
-<p>I am a graphic and web designer and front-end developer. I have more than ten years of experience in various areas of design including web, digital, and print design, and have more than eight years of service in the higher education landscape. <a href="https://www.linkedin.com/in/haleyhopper" target="_blank">Here's my LinkedIn profile</a>, if you're interested.</p>
-<p>I enjoy the complex artistry of design and the structure and exactness of front-end code. I crave organization and I'm motivated by helping others achieve their goals.</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 mx-auto">
+      <img class="img-thumbnail float-left mr-4 mb-2 mt-4" style="width: 33%;" src="../../img/haley-computer-glasses.jpg" alt="portrait photograph of Haley Hopper wearing glasses and a soft smile" />
+      <p>I am a graphic and web designer and front-end developer. I have more than ten years of experience in various areas of design including web, digital, and print design, and have more than eight years of service in the higher education landscape. <a href="https://www.linkedin.com/in/haleyhopper" target="_blank">Here's my LinkedIn profile</a>, if you're interested.</p>
+      <p>I enjoy the complex artistry of design and the structure and exactness of front-end code. I crave organization and I'm motivated by helping others achieve their goals.</p>
 
-<p>These days, I spend the majority of my working time supporting the style, structure, functionality, and technical advancement of an enterprise-wide university website with 200+ CMS editors, as well as designing and building new pages and sites for high-level initiatives. I am open to taking on additional projects, especially if they allow me to explore new topics! <a href="inquire.html">Inquire if you'd like to discuss your project</a>.</p>
+      <p>These days, I spend the majority of my working time supporting the style, structure, functionality, and technical advancement of an enterprise-wide university website with 200+ CMS editors, as well as designing and building new pages and sites for high-level initiatives. I am open to taking on additional projects, especially if they allow me to explore new topics! <a href="inquire.html">Inquire if you'd like to discuss your project</a>.</p>
 
-<p>I like good paper, home DIY projects, and strawberry cheesecake.
-(And I don't think that fruit should be on pizza.)</p>
+      <p>I like good paper, home DIY projects, and strawberry cheesecake.
+      (And I don't think that fruit should be on pizza.)</p>
 
-<div class="row mb-4">
-  <div class="col-md-12">
-    <h2 class="section-heading">Skills</h2>
-  </div>
-  <div class="col-md-6">
-    <h3>Branding</h3>
-    <ul>
-      <li>Print Design</li>
-      <li>Photo Editing</li>
-      
-    </ul>
-  </div>
-  <div class="col-md-6">
-    <h3>Web Design</h3>
-    <ul>
-      <li>Responsive Design</li>
-      <li>User Interface Design</li>
-      <li>Adobe XD</li>
-      <li>HTML Email Design and Development</li>
-      <li>Email Marketing Systems</li>
-    </ul>
-  </div>
-  <div class="col-md-6">
-    <h3>Web Strategy</h3>
-    <ul>
-      <li>User Experience</li>
-      <li>Information Architecture</li>
-      <li>Web Project Management</li>
-      <li>Web Migration</li>
-      <li>Enterprise-wide Websites</li>
-      <li>Centralized Site Management</li>
-      <li>Content Management Systems</li>
-      <li>Web Content Assessment</li>
-      <li>Client Communication</li>
-      <li>Higher Education Websites</li>
-    </ul>
-  </div>
-  <div class="col-md-6">
-    <h3>Web Development</h3>
-    <ul>
-      <li>Responsive Development</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Web Accessibility</li>
-      <li>Drupal CMS</li>
-      <li>Javascript Implementation</li>
-      <li>XML</li>
-      <li>Twig</li>
-    </ul>
-  </div>
-  <div class="col-md-12">
-    <h2 class="section-heading">Software</h2>
-  </div>
-  <div class="col-md-6">
-    <ul>   
-      <li>Adobe XD</li>
-      <li>Adobe InDesign</li>
-      <li>Adobe Illustrator</li>
-      <li>Adobe Photoshop</li>
-      <li>GitHub Desktop</li>
-      <li>Drupal CMS</li>
-      <li>Wordpress</li>
-      <li>Weebly</li>
-      <li>OmniUpdate Campus</li>
-      <li>Bootstrap Framework</li>
-      <li>Visual Studio Code</li>
-    </div>
-    <div class="col-md-6">
+      <div class="row mb-4">
+        <div class="col-md-12">
+          <h2 class="section-heading">Skills</h2>
+        </div>
+        <div class="col-md-6">
+          <h3>Branding</h3>
+          <ul>
+            <li>Brand Identity</li>
+            <li>Brand Exploration</li>
+            <li>Logo Design</li>
+            <li>Brand Collateral</li>
+            <li>Style Guide Creation</li>
+            <li>Print Design</li>      
+          </ul>
+        </div>
+        <div class="col-md-6">
+          <h3>Web Design</h3>
+          <ul>
+            <li>Responsive Web Design</li>
+            <li>Brand-aligned Website Design</li>
+            <li>User Interface Design</li>
+            <li>Low-fidelity prototyping</li>
+            <li>High-fidelity prototyping</li>
+            <li>HTML Email Design</li>
+            
+          </ul>
+        </div>
+        <div class="col-md-6">
+          <h3>Web Strategy</h3>
+          <ul>
+            <li>User Experience</li>
+            <li>Information Architecture</li>
+            <li>Web Project Management</li>
+            <li>Web Migration</li>
+            <li>Enterprise-wide Websites</li>
+            <li>Centralized Site Management</li>
+            <li>Content Management Systems</li>
+            <li>Web Content Assessment</li>
+            <li>Higher Education Websites</li>
+          </ul>
+        </div>
+        <div class="col-md-6">
+          <h3>Web Development</h3>
+          <ul>
+            <li>Responsive Development</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Web Accessibility</li>
+            <li>Drupal CMS</li>
+            <li>Javascript Implementation</li>
+            <li>XML</li>
+            <li>Twig</li>
+            <li>HTML Email Development</li>
+            <li>Email Marketing Systems</li>
+          </ul>
+        </div>
+        <div class="col-md-12">
+          <h2 class="section-heading">Software</h2>
+        </div>
+        <div class="col-md-6">
+          <ul class="mb-0">   
+            <li>Adobe XD</li>
+            <li>Adobe InDesign</li>
+            <li>Adobe Illustrator</li>
+            <li>Adobe Photoshop</li>
+            <li>GitHub Desktop</li>
+            <li>Drupal CMS</li>
+            <li>Wordpress</li>
+            <li>Weebly</li>
+            <li>OmniUpdate Campus</li>
+            <li>Bootstrap Framework</li>
+            <li>Visual Studio Code</li>
+          </ul>
+        </div>
+        <div class="col-md-6">
+          <ul>
             <li>Brackets</li>
-      <li>Teamwork</li>
-      <li>InMotion Ignite</li>
-      <li>Slack</li>
-      <li>Zoom</li>
-      <li>Microsoft Teams</li>
-      <li>Emma</li>
-      <li>Campaign Monitor</li>
-      <li>MailChimp</li>
-      <li>Google Workspace Apps</li>
-      <li>Microsoft Office Suite</li>
-    </ul>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-6">
-    <h2 class="section-heading">Personal Facts</h2>
-    <ul class="mb-5">
-      <li><a href="https://baconipsum.com/" target="_blank">Fan of Bacon Ipsum</a></li>
-      <li><a href="http://howtoreallypronouncegif.com/" target="_blank">Pronounces it gif, not jif</a></li>
-      <li>Supports the Oxford Comma</li>
-      <li>Is a budding home canner</li>
-      <li>Makes handmade soap</li>
-      <li><a href="https://www.youtube.com/watch?v=XMZIAlKFRY4" target="_blank">Allergic to gluten</a></li>
-    </ul>
-  </div>
-  <div class="col-md-6">
-    <span class="caption text-muted">Haley and Haley, the penguin, at the aquarium</span>
-    <img class="img-fluid" src="../../img/penguin-haley-zoom.jpg" alt="page design showing a full experience layout" />
+            <li>Teamwork</li>
+            <li>InMotion Ignite</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Microsoft Teams</li>
+            <li>Emma</li>
+            <li>Campaign Monitor</li>
+            <li>MailChimp</li>
+            <li>Google Workspace Apps</li>
+            <li>Microsoft Office Suite</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <h2 class="section-heading">Personal Facts</h2>
+          <ul class="mb-5">
+            <li><a href="https://baconipsum.com/" target="_blank">Fan of Bacon Ipsum</a></li>
+            <li><a href="http://howtoreallypronouncegif.com/" target="_blank">Pronounces it gif, not jif</a></li>
+            <li>Supports the Oxford Comma</li>
+            <li>Is a budding home canner</li>
+            <li>Makes handmade soap</li>
+            <li><a href="https://www.youtube.com/watch?v=XMZIAlKFRY4" target="_blank">Allergic to gluten</a></li>
+          </ul>
+        </div>
+        <div class="col-md-6 text-center">
+          <figure class="figure">
+            <figcaption class="figure-caption caption text-muted">Haley and Haley, the penguin, at the aquarium.</figcaption>
+            <img class="img-fluid figure-img w-100" src="../../img/penguin-haley-zoom.jpg" alt="page design showing a full experience layout" />
+          </figure>    
+        </div>
+      </div>
+    </div>
   </div>
 </div>
