changes to homepage content and styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ background: '/img/bg-index.jpg'
         <p>You work hard on your small business.<br>Your branding should work just as hard.</p>
       </div>
       <div class="col-lg-6 col-md-10 mx-md-auto">
-        <img class="img-fluid" src="https://via.placeholder.com/1080x700">
+        <img class="img-fluid" src="img/burnt-out-woman.jpg">
       </div>
       <div class="col-lg-6 col-md-10 mx-md-auto">
         <p>When you aren't around to give the elevator pitch for your business, your branding is doing it for you. Your brand is telling your potential customers:</p>
@@ -63,21 +63,21 @@ background: '/img/bg-index.jpg'
         <p class="serif-highlight">I help small businesses level-up their brand and online presence.</p>
         <p>Providing products and services you are passionate about is your calling. You work hard to move your business forward and you're ready to step up your reputation.</p>
         <p>I create strategic, user-focused brands and designs for small businesses that help you communicate with the right customers so you can focus on delivering your passion. </p>
-        <a class="btn btn-secondary" href="{{"/work-with-me" | relative_url }}">More About Me</a>
+        <a class="btn btn-primary" href="{{"/work-with-me" | relative_url }}">Work With Me</a>
       </div>
     </div>
   </div>
 </div>
 
-<div class="row bg-goldenrod">
+<div class="row bg-mustard text-white">
   <div class="container">
     <div class="row mt-5 mb-5 justify-content-center">
-      <div class="col-md-5 border border-primary m-3">
+      <div class="col-md-5 border border-white m-3">
         <h3 class="mt-4">Branding</h3>
         <p>get products in. well here’s how we can resolve your problems.
           Could be products. Could be 3 differect sections or divisions of company. All need to solve my problems in different ways.</p>
       </div>
-      <div class="col-md-5 border border-primary m-3">
+      <div class="col-md-5 border border-white m-3">
         <h3 class="mt-4">Web Design</h3>
         <p>get products in. well here’s how we can resolve your problems.
           Could be products. Could be 3 differect sections or divisions of company. All need to solve my problems in different ways.</p>
@@ -89,7 +89,7 @@ background: '/img/bg-index.jpg'
   </div>
 </div>
 
-<div class="row">
+<div class="row bg-floralwhite pb-5">
   <div class="container">
     <div class="row text-center">
       <div class="col-md-12">
