edits content on work with me page

--- a/work-with-me.html
+++ b/work-with-me.html
@@ -1,43 +1,100 @@
 ---
 layout: page
 title: Work with Me
+description: I enjoy crafting new brands, creating web designs, and writing code to bring them to the web.
 background: '/img/bg-work-with-me.jpg'
-last-updated: April 18, 2022
+last-updated: July 5, 2022
 published: true
 ---
-<p class="section-heading">Let's take your business's brand to the next level</p>
-<p>I am a web design and development manager of an enterprise-wide university website with 200+ CMS editors. I have over nine years of experience in various areas of design including web, digital, and print design, and have eight years of service in the higher education landscape. I currently oversee the style, structure, functionality, and technical advancement of the university's web spaces, and design and build new pages and sites for high-level initiatives. I enjoy the complex artistry of web design and the structure and exactness of front-end code. I crave organization and I'm motivated by helping others achieve their goals.</p>
 
-<p>I like good paper, home DIY projects, and strawberry cheesecake.
-(And I don't think that fruit should be on pizza.)</p>
+<div class="row bg-white pb-5">
+      <div class="col-lg-5 offset-lg-2">
+        <p class="mb-2" style="font-size: 1.5em;">Small businesses:</p>
+        <h3 class="mt-1" style="font-size: 3em;">Let's take your brand to the next level.</h3>
+        <p>It's time for an upgrade. Submit an inquiry and we'll figure out your next best step, together.</p>
+        <a class="btn btn-primary" href="{{"/inquire" | relative_url }}">Inquire</a>
+      </div>
+      <div class="col-lg-3">
+        <img class="img-fluid" src="https://images.pexels.com/photos/2771424/pexels-photo-2771424.jpeg?auto=compress&cs=tinysrgb&w=600">
+      </div>
+</div>
 
-<div class="row">
-  <div class="col-md-12">
-    <h2>Pricing</h2>
-  </div>  
-
-  <div class="col-lg-6 col-md-10 mx-auto">
-    <p> I am a designer and web developer with more than a decade of experience in the design and digital landscape. level-up their online presence and modernize their style while staying true to their core personality</p>
-    <p>If you work with me you'll have:</p>
-    <ul>
-        <li>Content hierarchy for what your users are seeking</li>
-        <li>Modern aesthetic showing you care about your online reputation</li>
-        <li>Focus on responsive behavior so your site meets users where they are – on their phones</li>
-    </ul>
-  </div>
-
-  <div class="col-md-9 mx-auto">
-    <p>When you work with me, you should expect questions like “What are your key differentiators?” and “What are the primary goals of your target audience?” not “What colors do want your buttons to be?”</p>
-    <p>I’m not a good fit for you if:</p>
-    <ul class="failure-list">
-        <li>You are looking for someone to just “make it pretty.”</li>
-        <li>You don’t like someone asking questions and you want them the to blindly follow instructions.</li>
-        <li>You aren’t open to someone pushing back on ideas in order to advocate for your end users and customers.</li>
-    </ul>
-    <p>Do we sound like a match? Tell me about your project.</p>
-    <a class="btn btn-secondary" href="{{"/inquire" | relative_url }}">Inquire</a>
+<div class="row bg-primary pt-2 pb-5 text-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10 mx-auto">
+        <h2 class="section-heading">You know you're good at what you do.</h2>
+        <p>Your branding and website should reflect the caliber of your work. Branding and design can feel mysterious, but since you’re still reading, it means that you at lease <em>suspect</em> how important branding is to the success and long-term viability of a business.</p>
+        <p>Your brand identity is not just your logo and the colors you use, it’s a holistic, strategic effort to communicate your company's identity to your potential customers &mdash; An effort to turn them from prospects into buyers.</p>
+        <p>Companies that invest in their brands consistently outperform their competitors. You need a brand and website that works hard like you do. And I can make it for you.</p>
+      </div>
+    </div>
   </div>
 </div>
 
+<div class="row">
 
+    <div class="container">
+      <div class="row bg-floralwhite border p-3 mt-5">
+    <div class="col-md-12 text-center">
+      <h2 class="section-heading mt-3">How I'm Different</h2></div>
+      <div class="col-md-6">
+      <p>As a designer and web developer with more than a decade of experience in the design and digital landscape, I've seen the good, the bad, and the ugly. I'm here to level-up your online presence and modernize your style while staying true to your company's core personality.</p>
+      <p>If you work with me you'll have:</p>
+      <ul class="success-list">
+        <li>Branding materials that represent the vision of your business</li>
+        <li>Content hierarchy for what your users are seeking</li>
+        <li>Modern aesthetic showing you care about your online reputation</li>
+        <li>A responsive website so your business meets users where they are – on their phones</li>
+      </ul>
+    </div>
+    <div class="col-md-6">
+      <p>When you work with me, you should expect questions like “What are your key differentiators?” and “What are the primary goals of your target audience?” not “What colors do want your buttons to be?”</p>
+      <p>I’m not a good fit for you if:</p>
+      <ul class="failure-list">
+          <li>You are looking for someone to just “make it pretty.”</li>
+          <li>You don’t like someone asking questions and you want them the to blindly follow instructions.</li>
+          <li>You aren’t open to someone pushing back on ideas in order to advocate for your end users and customers.</li>
+          <li>You're attached to your old ways of doing things because "This is the way we've always done it," a.k.a.- its easy and comfortable.</li>
+      </ul>
+      </div>
+      <div class="col-md-12 text-center">
+      <p>Do we sound like a match? Tell me about your project.</p>
+      <a class="btn btn-primary mb-4" href="{{"/inquire" | relative_url }}">Inquire</a>
+    </div></div>
+  </div>
+</div>
 
+<div class="row">
+  <div class="container">
+    <div class="col-lg-8 offset-lg-2 text-center">
+      <h2 class="section-heading">Packages</h2>
+    </div> 
+    <div class="row mb-5 justify-content-between text-center">
+      <div class="col m-3 bg-floralwhite">
+        <div class="border m-3">
+        <h3 class="mt-4">Branding</h3>
+        <p>get products in. well here’s how we can resolve your problems.
+          Could be products. Could be 3 differect sections or divisions of company. All need to solve my problems in different ways.</p>
+          </div>
+          <a class="btn btn-primary" href="{{"/work-with-me" | relative_url }}">I Want This</a>
+      </div>
+      <div class="col m-3 bg-floralwhite">
+        <div class="border m-3">
+        <h3 class="mt-4">Web Design</h3>
+        <p>get products in. well here’s how we can resolve your problems.
+          Could be products. Could be 3 differect sections or divisions of company. All need to solve my problems in different ways.</p>
+          </div>
+          <a class="btn btn-primary" href="{{"/work-with-me" | relative_url }}">I Want This</a>
+      </div>
+      <div class="col m-3 bg-floralwhite">
+        <div class="border m-3">
+        <h3 class="mt-4">The Whole Shebang</h3>
+        <p>get products in. well here’s how we can resolve your problems.
+          Could be products. Could be 3 differect sections or divisions of company. All need to solve my problems in different ways.</p>
+          </div>
+          <a class="btn btn-primary" href="{{"/work-with-me" | relative_url }}">I Want This</a>
+      </div>
+    </div>
+  </div>
+</div>
