hides work with me page

--- a/work-with-me.html
+++ b/work-with-me.html
@@ -4,17 +4,17 @@ title: Work with Me
 description: I enjoy crafting new brands, creating web designs, and writing code to bring them to the web.
 background: '/img/bg-work-with-me.jpg'
 last-updated: July 5, 2022
-published: true
+published: false
 ---
 
 <div class="row bg-white pb-5">
-      <div class="col-lg-5 offset-lg-2">
+      <div class="col-lg-5 offset-lg-2 col-11">
         <p class="mb-2" style="font-size: 1.5em;">Small businesses:</p>
         <h3 class="mt-1" style="font-size: 3em;">Let's take your brand to the next level.</h3>
         <p>It's time for an upgrade. Submit an inquiry and we'll figure out your next best step, together.</p>
         <a class="btn btn-primary" href="{{"/inquire" | relative_url }}">Inquire</a>
       </div>
-      <div class="col-lg-3">
+      <div class="col-lg-3 col-11">
         <img class="img-fluid" src="https://images.pexels.com/photos/2771424/pexels-photo-2771424.jpeg?auto=compress&cs=tinysrgb&w=600">
       </div>
 </div>
@@ -22,7 +22,7 @@ published: true
 <div class="row bg-primary pt-2 pb-5 text-white">
   <div class="container">
     <div class="row">
-      <div class="col-md-10 mx-auto">
+      <div class="col-md-10 col-11 mx-auto">
         <h2 class="section-heading">You know you're good at what you do.</h2>
         <p>Your branding and website should reflect the caliber of your work. Branding and design can feel mysterious, but since you’re still reading, it means that you at lease <em>suspect</em> how important branding is to the success and long-term viability of a business.</p>
         <p>Your brand identity is not just your logo and the colors you use, it’s a holistic, strategic effort to communicate your company's identity to your potential customers &mdash; An effort to turn them from prospects into buyers.</p>
@@ -33,7 +33,6 @@ published: true
 </div>
 
 <div class="row">
-
     <div class="container">
       <div class="row bg-floralwhite border p-3 mt-5">
     <div class="col-md-12 text-center">
@@ -68,6 +67,29 @@ published: true
 <div class="row">
   <div class="container">
     <div class="col-lg-8 offset-lg-2 text-center">
+      <h2 class="section-heading">Services</h2>
+    </div> 
+    <div class="row mt-5 mb-5 justify-content-center">
+      <div class="col-md-5 border border-white m-3">
+        <h3 class="mt-4">Branding</h3>
+        <p>get products in. well here’s how we can resolve your problems.
+          Could be products. Could be 3 differect sections or divisions of company. All need to solve my problems in different ways.</p>
+      </div>
+      <div class="col-md-5 border border-white m-3">
+        <h3 class="mt-4">Web Design</h3>
+        <p>get products in. well here’s how we can resolve your problems.
+          Could be products. Could be 3 differect sections or divisions of company. All need to solve my problems in different ways.</p>
+      </div>
+      <div class="col-md-10 mx-auto text-center">
+        <a class="btn btn-primary" href="{{"/inquire" | relative_url }}">Inquire</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="row">
+  <div class="container">
+    <div class="col-lg-8 offset-lg-2 text-center">
       <h2 class="section-heading">Packages</h2>
     </div> 
     <div class="row mb-5 justify-content-between text-center">
@@ -97,4 +119,4 @@ published: true
       </div>
     </div>
   </div>
-</div>
+</div> -->
