--- a/_projects/logos.html
+++ b/_projects/logos.html
@@ -2,7 +2,7 @@
 layout: portfolio-item
 title: Logo Designs
 subtitle: An assortment of my logo designs from over the years.
-project-date: 2015-2022
+project-date: 2022-05-25
 work-type: Branding
 front-image: /img/portfolio/logo-designs-front.jpg
 front-image-alt: "Ginger Cascades Adventure Base Camp Logo"
