hides Hillside Haven Farm page

--- a/_projects/hillside-haven-farm.html
+++ b/_projects/hillside-haven-farm.html
@@ -1,13 +1,13 @@
 ---
 layout: portfolio-item
-title: Hillside Haven Farm
+title: Hillside Haven Farm Identity
 subtitle: Brand identity for a family-friendly you-pick lavender farm and event venue.
 project-date: 2022-06-10
 work-type: Branding
 site-type: 
 front-image: /img/portfolio/hillside-haven-front.jpg
 front-image-alt: "Hillside Haven logo"
-published: true
+published: false
 ---
 
 <div class="row">
