Updates about page
Adds honors list, reorders skills, adds a few skills, separates sections, and adds background colors to sections

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: page
 title: About Me
 description: I enjoy crafting new brands, creating web designs, and writing code to bring them to the web.
 background: '/img/bg-about.jpg'
-last-updated: July 5, 2022
+last-updated: February 5, 2023
 ---
 
 <div class="container">
@@ -17,97 +17,142 @@ last-updated: July 5, 2022
 
       <p>I like good paper, home DIY projects, and strawberry cheesecake.
       (And I don't think that fruit should be on pizza.)</p>
+    </div>
+  </div>
+</div>
 
-      <div class="row mb-4">
-        <div class="col-md-12">
-          <h2 class="section-heading">Skills</h2>
-        </div>
-        <div class="col-md-6">
-          <h3>Branding</h3>
-          <ul>
-            <li>Brand Identity</li>
-            <li>Brand Exploration</li>
-            <li>Logo Design</li>
-            <li>Brand Collateral</li>
-            <li>Style Guide Creation</li>
-            <li>Print Design</li>      
+<div class="row bg-tertiary">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10 mx-auto">
+        <div class="row mb-4">
+          <div class="col-md-12">
+            <h2 class="section-heading">Honors</h2>
+            <ul class="fa-ul">
+              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-trophy"></i></span>2022	Gold in “Institutional Directory”, <a href="https://educationdigitalmarketingawards.com/edma-winners-list-2022/">Education Digital Marketing Awards</a>, Ohio University Building Directory</li>
+              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-trophy"></i></span>2022	Gold in “Development Website”, <a href="https://educationdigitalmarketingawards.com/edma-winners-list-2022/">Education Digital Marketing Awards</a>, OHIO Give website and fund exploration tool
+                </li>
+              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-medal"></i></span>2022	Silver in “Institutional Website”, <a href="https://educationdigitalmarketingawards.com/edma-winners-list-2022/">Education Digital Marketing Awards</a>, Ohio University Homepage
+                </li>
+              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-award"></i></span>2022	Merit in “Microsite”, <a href="https://educationdigitalmarketingawards.com/edma-winners-list-2022/">Education Digital Marketing Awards</a>, Experience OHIO website, exploration tool, and homepage integration
+                </li>
+              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-award-simple"></i></span>2019	Honorable Mention in “Website”, <a href="https://ucda.canto.com/v/UCDADesignAwards2019/landing">University & College Designers Association</a>, Belcher Memorial Website
+                </li>
+              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-trophy-star"></i></span>2018	Grand Award in “Diversity Programs”, <a href="https://www.case.org/awards/2018/2018-district-iii-award-winners">Council for Advancement and Support of Education - District III</a>, Diversity Dialogues Website
+                </li>
           </ul>
-        </div>
-        <div class="col-md-6">
-          <h3>Web Design</h3>
-          <ul>
-            <li>Responsive Web Design</li>
-            <li>Brand-aligned Website Design</li>
-            <li>User Interface Design</li>
-            <li>Low-fidelity prototyping</li>
-            <li>High-fidelity prototyping</li>
-            <li>HTML Email Design</li>
-            
-          </ul>
-        </div>
-        <div class="col-md-6">
-          <h3>Web Strategy</h3>
-          <ul>
-            <li>User Experience</li>
-            <li>Information Architecture</li>
-            <li>Web Project Management</li>
-            <li>Web Migration</li>
-            <li>Enterprise-wide Websites</li>
-            <li>Centralized Site Management</li>
-            <li>Content Management Systems</li>
-            <li>Web Content Assessment</li>
-            <li>Higher Education Websites</li>
-          </ul>
-        </div>
-        <div class="col-md-6">
-          <h3>Web Development</h3>
-          <ul>
-            <li>Responsive Development</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Web Accessibility</li>
-            <li>Drupal CMS</li>
-            <li>Javascript Implementation</li>
-            <li>XML</li>
-            <li>Twig</li>
-            <li>HTML Email Development</li>
-            <li>Email Marketing Systems</li>
-          </ul>
-        </div>
-        <div class="col-md-12">
-          <h2 class="section-heading">Software</h2>
-        </div>
-        <div class="col-md-6">
-          <ul class="mb-0">   
-            <li>Adobe XD</li>
-            <li>Adobe InDesign</li>
-            <li>Adobe Illustrator</li>
-            <li>Adobe Photoshop</li>
-            <li>GitHub Desktop</li>
-            <li>Drupal CMS</li>
-            <li>Wordpress</li>
-            <li>Weebly</li>
-            <li>OmniUpdate Campus</li>
-            <li>Bootstrap Framework</li>
-            <li>Visual Studio Code</li>
-          </ul>
-        </div>
-        <div class="col-md-6">
-          <ul>
-            <li>Brackets</li>
-            <li>Teamwork</li>
-            <li>InMotion Ignite</li>
-            <li>Slack</li>
-            <li>Zoom</li>
-            <li>Microsoft Teams</li>
-            <li>Emma</li>
-            <li>Campaign Monitor</li>
-            <li>MailChimp</li>
-            <li>Google Workspace Apps</li>
-            <li>Microsoft Office Suite</li>
-          </ul>
+          </div>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+
+<div class="row bg-floralwhite">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10 mx-auto">
+        <div class="row mb-4">
+          <div class="col-md-12">
+            <h2 class="section-heading">Skills</h2>
+          </div>
+          <div class="col-md-6">
+            <h3>Web Strategy</h3>
+            <ul>
+              <li>User Experience</li>
+              <li>Information Architecture</li>
+              <li>Web Project Management</li>
+              <li>Web Migration</li>
+              <li>Enterprise-wide Websites</li>
+              <li>Centralized Site Management</li>
+              <li>Content Management Systems</li>
+              <li>Web Content Assessment</li>
+              <li>Higher Education Websites</li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <h3>Web Development</h3>
+            <ul>
+              <li>Responsive Development</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Web Accessibility</li>
+              <li>Drupal CMS</li>
+              <li>Javascript Implementation</li>
+              <li>Twig</li>
+              <li>Git</li>
+              <li>HTML Email Development</li>
+              <li>Email Marketing Systems</li>
+              <li>XML</li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <h3>Web Design</h3>
+            <ul>
+              <li>Responsive Web Design</li>
+              <li>Brand-aligned Website Design</li>
+              <li>User Interface Design</li>
+              <li>Low-fidelity prototyping</li>
+              <li>High-fidelity prototyping</li>
+              <li>HTML Email Design</li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <h3>Branding</h3>
+            <ul>
+              <li>Brand Identity</li>
+              <li>Brand Exploration</li>
+              <li>Logo Design</li>
+              <li>Brand Collateral</li>
+              <li>Style Guide Creation</li>
+              <li>Print Design</li>      
+            </ul>
+          </div>
+          <div class="col-md-12">
+            <h2 class="section-heading">Software</h2>
+          </div>
+          <div class="col-md-6">
+            <ul class="mb-0">   
+              <li>Adobe XD</li>
+              <li>Adobe InDesign</li>
+              <li>Adobe Illustrator</li>
+              <li>Adobe Photoshop</li>
+              <li>GitHub Desktop</li>
+              <li>Github.com</li>
+              <li>Drupal CMS</li>
+              <li>Wordpress</li>
+              <li>Weebly</li>
+              <li>Wix</li>
+              <li>OmniUpdate Campus</li>
+              <li>Bootstrap Framework</li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <ul>
+              <li>Visual Studio Code</li>
+              <li>Brackets</li>
+              <li>Teamwork</li>
+              <li>InMotion Ignite</li>
+              <li>Slack</li>
+              <li>Zoom</li>
+              <li>Microsoft Teams</li>
+              <li>Emma</li>
+              <li>Campaign Monitor</li>
+              <li>MailChimp</li>
+              <li>Google Workspace Apps</li>
+              <li>Microsoft Office Suite</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-10 mx-auto">
       <div class="row">
         <div class="col-md-6">
           <h2 class="section-heading">Personal Facts</h2>
