adds inquiry link under featured projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -48,7 +48,7 @@ background: '/img/bg-portfolio.jpg'
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto text-center">
 
-       <p>Would your project fit right in here? Let's talk!</p>
+       <p>Would your project fit right in here? <a href="{{"/inquire" | relative_url }}">Let's talk!</a></p>
 
       </div>
     </div>
